// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Progress/Progress should display a progressbar at 0 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: #0d6efd;
}
.s {
  width: 0%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
.ac {
  overflow-x: hidden;
}
.ae {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="0"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a progressbar at 25 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: #0d6efd;
}
.s {
  width: 25%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
.ac {
  overflow-x: hidden;
}
.ae {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="25"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a progressbar at 50 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: #0d6efd;
}
.s {
  width: 50%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
.ac {
  overflow-x: hidden;
}
.ae {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="50"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a progressbar at 75 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: #0d6efd;
}
.s {
  width: 75%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
.ac {
  overflow-x: hidden;
}
.ae {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="75"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a progressbar at 100 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: #0d6efd;
}
.w {
  transition-property: width;
}
.x {
  transition-duration: 0.6s;
}
.y {
  transition-delay: ease;
}
.z {
  transition-timing-function: ease;
}
.ab {
  overflow-x: hidden;
}
.ac {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .s {
    transition-property: none;
  }
  .t {
    transition-duration: 0s;
  }
  .u {
    transition-delay: 0s;
  }
  .v {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="100"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac b c e g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a progressbar with a label of variant danger 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(220, 53, 69, 1);
}
.s {
  width: 55%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
.ac {
  overflow-x: hidden;
}
.ae {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae b c g h i j m n o p q r s t u v w x y z"
  >
    55%
  </div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a progressbar with a label of variant default 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: #0d6efd;
}
.s {
  width: 55%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
.ac {
  overflow-x: hidden;
}
.ae {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae b c g h i j m n o p q r s t u v w x y z"
  >
    55%
  </div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a progressbar with a label of variant info 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(13, 202, 240, 1);
}
.s {
  width: 55%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
.ac {
  overflow-x: hidden;
}
.ae {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae b c g h i j m n o p q r s t u v w x y z"
  >
    55%
  </div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a progressbar with a label of variant success 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(25, 135, 84, 1);
}
.s {
  width: 55%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
.ac {
  overflow-x: hidden;
}
.ae {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae b c g h i j m n o p q r s t u v w x y z"
  >
    55%
  </div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a progressbar with a label of variant warning 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(255, 193, 7, 1);
}
.s {
  width: 55%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
.ac {
  overflow-x: hidden;
}
.ae {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae b c g h i j m n o p q r s t u v w x y z"
  >
    55%
  </div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a progressbar with of variant danger 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(220, 53, 69, 1);
}
.s {
  width: 55%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
.ac {
  overflow-x: hidden;
}
.ae {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a progressbar with of variant default 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: #0d6efd;
}
.s {
  width: 55%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
.ac {
  overflow-x: hidden;
}
.ae {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a progressbar with of variant info 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(13, 202, 240, 1);
}
.s {
  width: 55%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
.ac {
  overflow-x: hidden;
}
.ae {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a progressbar with of variant success 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(25, 135, 84, 1);
}
.s {
  width: 55%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
.ac {
  overflow-x: hidden;
}
.ae {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a progressbar with of variant warning 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(255, 193, 7, 1);
}
.s {
  width: 55%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
.ac {
  overflow-x: hidden;
}
.ae {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a stacked progressbar of variant danger 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 55%;
}
.f {
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: hidden;
}
.l {
  overflow-y: hidden;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(220, 53, 69, 1);
}
.s {
  width: 100%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab b c g h i j k l m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a stacked progressbar of variant default 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 55%;
}
.f {
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: hidden;
}
.l {
  overflow-y: hidden;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: #0d6efd;
}
.s {
  width: 100%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab b c g h i j k l m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a stacked progressbar of variant info 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 55%;
}
.f {
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: hidden;
}
.l {
  overflow-y: hidden;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(13, 202, 240, 1);
}
.s {
  width: 100%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab b c g h i j k l m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a stacked progressbar of variant success 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 55%;
}
.f {
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: hidden;
}
.l {
  overflow-y: hidden;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(25, 135, 84, 1);
}
.s {
  width: 100%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab b c g h i j k l m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a stacked progressbar of variant warning 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 55%;
}
.f {
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: hidden;
}
.l {
  overflow-y: hidden;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(255, 193, 7, 1);
}
.s {
  width: 100%;
}
.x {
  transition-property: width;
}
.y {
  transition-duration: 0.6s;
}
.z {
  transition-delay: ease;
}
.ab {
  transition-timing-function: ease;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab b c g h i j k l m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a striped progress bar of variant danger 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(220, 53, 69, 1);
}
.s {
  width: 55%;
}
.x {
  background-size: 1rem 1rem;
}
.y {
  background-image: linear-gradient(
    45deg,
    rgba(255, 255, 255, 0.15) 25%,
    transparent 25%,
    transparent 50%,
    rgba(255, 255, 255, 0.15) 50%,
    rgba(255, 255, 255, 0.15) 75%,
    transparent 75%,
    transparent
  );
}
.z {
  transition-property: width;
}
.ab {
  transition-duration: 0.6s;
}
.ac {
  transition-delay: ease;
}
.ae {
  transition-timing-function: ease;
}
.af {
  overflow-x: hidden;
}
.ag {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae af ag b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a striped progress bar of variant default 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: #0d6efd;
}
.s {
  width: 55%;
}
.x {
  background-size: 1rem 1rem;
}
.y {
  background-image: linear-gradient(
    45deg,
    rgba(255, 255, 255, 0.15) 25%,
    transparent 25%,
    transparent 50%,
    rgba(255, 255, 255, 0.15) 50%,
    rgba(255, 255, 255, 0.15) 75%,
    transparent 75%,
    transparent
  );
}
.z {
  transition-property: width;
}
.ab {
  transition-duration: 0.6s;
}
.ac {
  transition-delay: ease;
}
.ae {
  transition-timing-function: ease;
}
.af {
  overflow-x: hidden;
}
.ag {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae af ag b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a striped progress bar of variant info 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(13, 202, 240, 1);
}
.s {
  width: 55%;
}
.x {
  background-size: 1rem 1rem;
}
.y {
  background-image: linear-gradient(
    45deg,
    rgba(255, 255, 255, 0.15) 25%,
    transparent 25%,
    transparent 50%,
    rgba(255, 255, 255, 0.15) 50%,
    rgba(255, 255, 255, 0.15) 75%,
    transparent 75%,
    transparent
  );
}
.z {
  transition-property: width;
}
.ab {
  transition-duration: 0.6s;
}
.ac {
  transition-delay: ease;
}
.ae {
  transition-timing-function: ease;
}
.af {
  overflow-x: hidden;
}
.ag {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae af ag b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a striped progress bar of variant success 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(25, 135, 84, 1);
}
.s {
  width: 55%;
}
.x {
  background-size: 1rem 1rem;
}
.y {
  background-image: linear-gradient(
    45deg,
    rgba(255, 255, 255, 0.15) 25%,
    transparent 25%,
    transparent 50%,
    rgba(255, 255, 255, 0.15) 50%,
    rgba(255, 255, 255, 0.15) 75%,
    transparent 75%,
    transparent
  );
}
.z {
  transition-property: width;
}
.ab {
  transition-duration: 0.6s;
}
.ac {
  transition-delay: ease;
}
.ae {
  transition-timing-function: ease;
}
.af {
  overflow-x: hidden;
}
.ag {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae af ag b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should display a striped progress bar of variant warning 1`] = `
".a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(255, 193, 7, 1);
}
.s {
  width: 55%;
}
.x {
  background-size: 1rem 1rem;
}
.y {
  background-image: linear-gradient(
    45deg,
    rgba(255, 255, 255, 0.15) 25%,
    transparent 25%,
    transparent 50%,
    rgba(255, 255, 255, 0.15) 50%,
    rgba(255, 255, 255, 0.15) 75%,
    transparent 75%,
    transparent
  );
}
.z {
  transition-property: width;
}
.ab {
  transition-duration: 0.6s;
}
.ac {
  transition-delay: ease;
}
.ae {
  transition-timing-function: ease;
}
.af {
  overflow-x: hidden;
}
.ag {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae af ag b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should displayed an animated striped progress bar of variant danger 1`] = `
"@-webkit-keyframes k1 {
  0% {
    -webkit-background-position-x: 1rem;
    background-position-x: 1rem;
  }
}
@-moz-keyframes k1 {
  0% {
    -webkit-background-position-x: 1rem;
    background-position-x: 1rem;
  }
}
@keyframes k1 {
  0% {
    -webkit-background-position-x: 1rem;
    background-position-x: 1rem;
  }
}
.a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(220, 53, 69, 1);
}
.s {
  width: 55%;
}
.x {
  background-size: 1rem 1rem;
}
.y {
  background-image: linear-gradient(
    45deg,
    rgba(255, 255, 255, 0.15) 25%,
    transparent 25%,
    transparent 50%,
    rgba(255, 255, 255, 0.15) 50%,
    rgba(255, 255, 255, 0.15) 75%,
    transparent 75%,
    transparent
  );
}
.z {
  animation-duration: 1s;
}
.ab {
  animation-timing-function: linear;
}
.ac {
  animation-iteration-count: infinite;
}
.ae {
  animation-name: k1;
}
.af {
  transition-property: width;
}
.ag {
  transition-duration: 0.6s;
}
.ah {
  transition-delay: ease;
}
.ai {
  transition-timing-function: ease;
}
.aj {
  overflow-x: hidden;
}
.ak {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae af ag ah ai aj ak b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should displayed an animated striped progress bar of variant default 1`] = `
"@-webkit-keyframes k1 {
  0% {
    -webkit-background-position-x: 1rem;
    background-position-x: 1rem;
  }
}
@-moz-keyframes k1 {
  0% {
    -webkit-background-position-x: 1rem;
    background-position-x: 1rem;
  }
}
@keyframes k1 {
  0% {
    -webkit-background-position-x: 1rem;
    background-position-x: 1rem;
  }
}
.a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: #0d6efd;
}
.s {
  width: 55%;
}
.x {
  background-size: 1rem 1rem;
}
.y {
  background-image: linear-gradient(
    45deg,
    rgba(255, 255, 255, 0.15) 25%,
    transparent 25%,
    transparent 50%,
    rgba(255, 255, 255, 0.15) 50%,
    rgba(255, 255, 255, 0.15) 75%,
    transparent 75%,
    transparent
  );
}
.z {
  animation-duration: 1s;
}
.ab {
  animation-timing-function: linear;
}
.ac {
  animation-iteration-count: infinite;
}
.ae {
  animation-name: k1;
}
.af {
  transition-property: width;
}
.ag {
  transition-duration: 0.6s;
}
.ah {
  transition-delay: ease;
}
.ai {
  transition-timing-function: ease;
}
.aj {
  overflow-x: hidden;
}
.ak {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae af ag ah ai aj ak b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should displayed an animated striped progress bar of variant info 1`] = `
"@-webkit-keyframes k1 {
  0% {
    -webkit-background-position-x: 1rem;
    background-position-x: 1rem;
  }
}
@-moz-keyframes k1 {
  0% {
    -webkit-background-position-x: 1rem;
    background-position-x: 1rem;
  }
}
@keyframes k1 {
  0% {
    -webkit-background-position-x: 1rem;
    background-position-x: 1rem;
  }
}
.a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(13, 202, 240, 1);
}
.s {
  width: 55%;
}
.x {
  background-size: 1rem 1rem;
}
.y {
  background-image: linear-gradient(
    45deg,
    rgba(255, 255, 255, 0.15) 25%,
    transparent 25%,
    transparent 50%,
    rgba(255, 255, 255, 0.15) 50%,
    rgba(255, 255, 255, 0.15) 75%,
    transparent 75%,
    transparent
  );
}
.z {
  animation-duration: 1s;
}
.ab {
  animation-timing-function: linear;
}
.ac {
  animation-iteration-count: infinite;
}
.ae {
  animation-name: k1;
}
.af {
  transition-property: width;
}
.ag {
  transition-duration: 0.6s;
}
.ah {
  transition-delay: ease;
}
.ai {
  transition-timing-function: ease;
}
.aj {
  overflow-x: hidden;
}
.ak {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae af ag ah ai aj ak b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should displayed an animated striped progress bar of variant success 1`] = `
"@-webkit-keyframes k1 {
  0% {
    -webkit-background-position-x: 1rem;
    background-position-x: 1rem;
  }
}
@-moz-keyframes k1 {
  0% {
    -webkit-background-position-x: 1rem;
    background-position-x: 1rem;
  }
}
@keyframes k1 {
  0% {
    -webkit-background-position-x: 1rem;
    background-position-x: 1rem;
  }
}
.a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(25, 135, 84, 1);
}
.s {
  width: 55%;
}
.x {
  background-size: 1rem 1rem;
}
.y {
  background-image: linear-gradient(
    45deg,
    rgba(255, 255, 255, 0.15) 25%,
    transparent 25%,
    transparent 50%,
    rgba(255, 255, 255, 0.15) 50%,
    rgba(255, 255, 255, 0.15) 75%,
    transparent 75%,
    transparent
  );
}
.z {
  animation-duration: 1s;
}
.ab {
  animation-timing-function: linear;
}
.ac {
  animation-iteration-count: infinite;
}
.ae {
  animation-name: k1;
}
.af {
  transition-property: width;
}
.ag {
  transition-duration: 0.6s;
}
.ah {
  transition-delay: ease;
}
.ai {
  transition-timing-function: ease;
}
.aj {
  overflow-x: hidden;
}
.ak {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae af ag ah ai aj ak b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;

exports[`components/Progress/Progress should displayed an animated striped progress bar of variant warning 1`] = `
"@-webkit-keyframes k1 {
  0% {
    -webkit-background-position-x: 1rem;
    background-position-x: 1rem;
  }
}
@-moz-keyframes k1 {
  0% {
    -webkit-background-position-x: 1rem;
    background-position-x: 1rem;
  }
}
@keyframes k1 {
  0% {
    -webkit-background-position-x: 1rem;
    background-position-x: 1rem;
  }
}
.a {
  display: flex;
}
.b {
  height: 1rem;
}
.c {
  font-size: 0.75rem;
}
.d {
  background-color: #e9ecef;
}
.e {
  width: 100%;
}
.f {
  box-shadow:;
}
.g {
  border-top-left-radius: 0.375rem;
}
.h {
  border-top-right-radius: 0.375rem;
}
.i {
  border-bottom-right-radius: 0.375rem;
}
.j {
  border-bottom-left-radius: 0.375rem;
}
.k {
  overflow-x: visible;
}
.l {
  overflow-y: visible;
}
.m {
  flex-direction: column;
}
.n {
  justify-content: center;
}
.o {
  color: #fff;
}
.p {
  text-align: center;
}
.q {
  white-space: nowrap;
}
.r {
  background-color: rgba(255, 193, 7, 1);
}
.s {
  width: 55%;
}
.x {
  background-size: 1rem 1rem;
}
.y {
  background-image: linear-gradient(
    45deg,
    rgba(255, 255, 255, 0.15) 25%,
    transparent 25%,
    transparent 50%,
    rgba(255, 255, 255, 0.15) 50%,
    rgba(255, 255, 255, 0.15) 75%,
    transparent 75%,
    transparent
  );
}
.z {
  animation-duration: 1s;
}
.ab {
  animation-timing-function: linear;
}
.ac {
  animation-iteration-count: infinite;
}
.ae {
  animation-name: k1;
}
.af {
  transition-property: width;
}
.ag {
  transition-duration: 0.6s;
}
.ah {
  transition-delay: ease;
}
.ai {
  transition-timing-function: ease;
}
.aj {
  overflow-x: hidden;
}
.ak {
  overflow-y: hidden;
}
@media (prefers-reduced-motion: reduce) {
  .t {
    transition-property: none;
  }
  .u {
    transition-duration: 0s;
  }
  .v {
    transition-delay: 0s;
  }
  .w {
    transition-timing-function: ease;
  }
}


<div
  data-testid="progressbar"
  class="a b c d e f g h i j k l"
  role="progressbar"
  aria-label="Progress Bar"
  aria-valuenow="55"
  aria-valuemin="0"
  aria-valuemax="100"
>
  <div
    data-testid="progressbar-label"
    class="a ab ac ae af ag ah ai aj ak b c g h i j m n o p q r s t u v w x y z"
  ></div>
</div>
;
"
`;
